<resources>
    <string name="app_name">Farmacias CL</string>
    <string name="app_title" >Farmacias de Turno</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_bar_hint">Buscar por Comuna</string>
    <string name="pharmacy">Farmacia</string>
    <string name="schedule">Horario:</string>
    <string name="address">Dirección:</string>
    <string name="comuna">Comuna:</string>
    <string name="call">Llamar</string>
    <string name="to_map">Ver en Mapa</string>
    <string name="pharmacies">Farmacias</string>
    <string name="emergency">Emergencias</string>
    <string name="information">Información</string>
    <string name="number">Número:</string>
    <string name="about_header">Esta aplicación obtiene los datos directamente desde sitio del
        Ministerio de Salud de Chile (Minsal).</string>
    <string name="about_header_2">La veracidad de los datos de exclusiva responsabilidad del emisor.</string>
    <string name="about_header_3">Desarrollado por:</string>
    <string name="developer_name">Samuel Toloza</string>
    <string name="developer_email">tlz.system@gmail.com</string>
    <string name="developer_site">www.samueltoloza.cl</string>
</resources>