<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp">

    <TextView
        android:id="@+id/pharmacyItem_pharmacyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pharmacy"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pharmacyItem_NameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="TextView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pharmacyItem_pharmacyLabel" />

    <TextView
        android:id="@+id/pharmacyItem_scheduleLabel"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/schedule"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pharmacyItem_AddressLabel" />

    <TextView
        android:id="@+id/pharmacyItem_AddressLabel"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/address"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pharmacyItem_NameLabel" />

    <TextView
        android:id="@+id/pharmacyItem_AddressData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="TextView"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/pharmacyItem_AddressLabel"
        app:layout_constraintTop_toBottomOf="@+id/pharmacyItem_NameLabel" />

    <TextView
        android:id="@+id/pharmacyItem_ScheduleData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="TextView"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/pharmacyItem_scheduleLabel"
        app:layout_constraintTop_toBottomOf="@+id/pharmacyItem_AddressData" />

    <ImageButton
        android:id="@+id/pharmacyItem_Callbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_call_24" />

    <ImageButton
        android:id="@+id/pharmacyItem_MapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/pharmacyItem_Callbutton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_map_24" />
</androidx.constraintlayout.widget.ConstraintLayout>